fix: remove scrollbar-gutter to fix white bar on right and include latest app updates

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,7 +51,7 @@
   }
 
   html {
-    scrollbar-gutter: stable;
+    /* scrollbar-gutter: stable; */
   }
 
   body {
